# sttm-automate

./: .gitignore  .runtime_settings.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_ui.py
.github/workflows/: build-windows-exe.yml  release-binaries.yml
docs/: download-hosting.md  fine-tuning-gurbani-whisper.md  phase-1-release-checklist.md  phase-1-release-notes-template.md
landing/: index.html  styles.css  vercel.json
scripts/: build_mac_app.sh  build_windows_exe.ps1  install.sh  mac_app_entry.py  setup_audio.py  test_banidb.py  test_sttm_connection.py  test_whisper.py  windows_app_entry.py
src/: config.py  mac_app.py  main.py
src/api/: server.py
src/audio/: buffer.py  capture.py
src/controller/: base.py  sttm_http.py  sttm_playwright.py
src/matcher/: scorer.py  search.py  tracker.py
src/pipeline/: orchestrator.py
src/transcription/: engine.py  google_engine.py  processor.py  transliterate.py
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: test_accuracy.py
